--- a/cardapio.html
+++ b/cardapio.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/cardapio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <app-header></app-header>
@@ -27,11 +28,7 @@
             </button>
             <button class="category-btn" data-category="pizzas_tradicionais">
                 <i class="fas fa-pizza-slice"></i>
-                Pizzas Tradicionais
-            </button>
-            <button class="category-btn" data-category="pizzas_especiais">
-                <i class="fas fa-star"></i>
-                Pizzas Especiais
+                Pizzas
             </button>
             <button class="category-btn" data-category="bebidas">
                 <i class="fas fa-glass-cheers"></i>
