--- a/admin/index.html
+++ b/admin/index.html
@@ -1,91 +1,94 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin - Pizzaria JS</title>
+    <title>Admin - PizzaJS</title>
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/admin.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/admin.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
-<body class="admin-panel">
-    <nav class="admin-nav">
-        <div class="logo">
-            <i class="fas fa-pizza-slice"></i>
-            <span>Admin Panel</span>
-        </div>
-        <button id="logout-btn" class="btn-logout">
-            <i class="fas fa-sign-out-alt"></i>
-            Sair
-        </button>
-    </nav>
-
+<body>
     <div class="admin-container">
-        <div class="admin-header">
-            <h2>Gerenciar Produtos</h2>
-            <button id="add-product-btn" class="btn-primary">
-                <i class="fas fa-plus"></i>
-                Novo Produto
-            </button>
-        </div>
+        <aside class="sidebar">
+            <div class="sidebar-header">
+                <img src="../images/logo.png" alt="PizzaJS Admin" class="logo">
+            </div>
+            <nav class="sidebar-nav">
+                <ul>
+                    <li class="active">
+                        <a href="index.html">
+                            <i class="fas fa-pizza-slice"></i>
+                            Produtos
+                        </a>
+                    </li>
+                    <li>
+                        <a href="categories.html">
+                            <i class="fas fa-tags"></i>
+                            Categorias
+                        </a>
+                    </li>
+                    <li>
+                        <a href="orders.html">
+                            <i class="fas fa-shopping-bag"></i>
+                            Pedidos
+                        </a>
+                    </li>
+                    <li>
+                        <a href="users.html">
+                            <i class="fas fa-users"></i>
+                            Usuários
+                        </a>
+                    </li>
+                    <li>
+                        <a href="settings.html">
+                            <i class="fas fa-cog"></i>
+                            Configurações
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </aside>
 
-        <div class="products-table">
-            <table>
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Imagem</th>
-                        <th>Nome</th>
-                        <th>Preço</th>
-                        <th>Categoria</th>
-                        <th>Ações</th>
-                    </tr>
-                </thead>
-                <tbody id="products-list">
-                    <!-- Products will be loaded here -->
-                </tbody>
-            </table>
-        </div>
+        <main class="main-content">
+            <header class="content-header">
+                <h1>Produtos</h1>
+                <div class="header-actions">
+                    <div class="search-box">
+                        <input type="text" id="searchProduct" placeholder="Buscar produtos...">
+                        <i class="fas fa-search"></i>
+                    </div>
+                    <button id="addProductBtn" class="btn-primary">
+                        <i class="fas fa-plus"></i>
+                        Novo Produto
+                    </button>
+                </div>
+            </header>
+
+            <div class="content-body">
+                <div class="table-container">
+                    <table id="productsTable" class="data-table">
+                        <thead>
+                            <tr>
+                                <th>Imagem</th>
+                                <th>Nome</th>
+                                <th>Tipo</th>
+                                <th>Descrição</th>
+                                <th>Preço</th>
+                                <th>Status</th>
+                                <th>Ações</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- Produtos serão carregados aqui via JavaScript -->
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </main>
     </div>
 
-    <!-- Modal for adding/editing products -->
-    <div id="product-modal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h3 id="modal-title">Adicionar Produto</h3>
-            <form id="product-form">
-                <input type="hidden" id="product-id" name="product-id">
-                <div class="form-group">
-                    <label for="product-name">Nome:</label>
-                    <input type="text" id="product-name" name="product-name" required>
-                </div>
-                <div class="form-group">
-                    <label for="product-price">Preço:</label>
-                    <input type="number" id="product-price" name="product-price" step="0.01" required>
-                </div>
-                <div class="form-group">
-                    <label for="product-category">Categoria:</label>
-                    <select id="product-category" name="product-category" required>
-                        <option value="pizza">Pizza</option>
-                        <option value="bebida">Bebida</option>
-                        <option value="sobremesa">Sobremesa</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="product-description">Descrição:</label>
-                    <textarea id="product-description" name="product-description" required></textarea>
-                </div>
-                <div class="form-group">
-                    <label for="product-image">Imagem URL:</label>
-                    <input type="text" id="product-image" name="product-image" required>
-                </div>
-                <button type="submit" class="btn-primary">Salvar</button>
-            </form>
-        </div>
-    </div>
-
-    <!-- Scripts -->
-    <script src="js/auth.js"></script>
-    <script src="js/products.js"></script>
+    <script src="js/admin.js"></script>
 </body>
 </html>
